@@ -13,31 +13,78 @@ synmarine syntop tentwt ungrad velcon3 wavemovie wilson
 '''
 
 try:  # distributed version
-    Import('env root pkgdir bindir')
+    Import('env root pkgdir bindir libdir incdir')
     env = env.Clone()
 except: # local version
     env = bldutil.Debug()
     root = None
-    SConscript('../../api/c/SConstruct')
+    SConscript('../pwd/SConstruct')
 
 src = Glob('[a-z]*.c')
 
-env.Prepend(CPPPATH=['../../include'],
-            LIBPATH=['../../lib'],
-            LIBS=[env.get('DYNLIB','')+'rsf'])
+dynpre = env.get('DYNLIB','') 
 
+libs = [dynpre+'rsf']+env.get('LIBS',[])
+dlibs = ['drsf']+env.get('LIBS',[])
+
+env.Prepend(CPPPATH=['../../include'],
+            LIBPATH=['../../lib'])
+
+dynlib = ('-static-intel' not in env.get('LINKFLAGS',''))
+
+objects = []
+dobjects = []
+includes = []
 for source in src:
     inc = env.RSF_Include(source,prefix='')
     obj = env.StaticObject(source)
     env.Depends(obj,inc)
 
+    objects.append(obj)
+    includes.append(inc)
+
+    if dynlib:
+        obj = env.SharedObject(source)
+        env.Depends(obj,inc)
+        dobjects.append(obj)
+        
+lib = env.StaticLibrary('rsfgee',objects)
+inc = env.Command('rsfgee.h',includes,Action(bldutil.__merge))
+
+env.Install('../../lib',lib)
+env.Install('../../include',inc)
+
+if root:
+    env.Install(libdir,lib)
+    env.Install(incdir,inc)
+
+if dynlib:
+    dlib = env.SharedLibrary('rsfgee',dobjects,SHLIBPREFIX='libd',LIBS=dlibs)
+    env.Install('../../lib',dlib)
+    if root:
+        install = env.Install(libdir,dlib)
+
+        if dynpre and env['PLATFORM'] == 'darwin':
+            env.AddPostAction(install,
+                              'install_name_tool -change '
+                              'build/api/c/libdrsf.dylib '
+                              '%s/libdrsf.dylib %s' % (libdir,install[0]))
+
+
 mains = Split(progs)
 for prog in mains:
     sources = ['M' + prog]
     bldutil.depends(env,sources,'M'+prog)
-    prog = env.Program(prog,map(lambda x: x + '.c',sources))
+    env.StaticObject('M'+prog+'.c')
+    prog = env.Program(prog,map(lambda x: x + '.o',sources),LIBS=libs)
     if root:
         env.Install(bindir,prog)
+
+        if dynpre and env['PLATFORM'] == 'darwin':
+            env.AddPostAction(install,
+                              'install_name_tool -change '
+                              'build/api/c/libdrsf.dylib '
+                              '%s/libdrsf.dylib %s' % (libdir,install[0]))
 
 ######################################################################
 # SELF-DOCUMENTATION
