@@ -17,7 +17,7 @@
 */
 
 #include <rsf.h>
-#include "tcaf1.h"
+#include <rsfgee.h>
 
 #include "filter1d_tcaf.h"
 
