@@ -1,1 +1,0 @@
-../gee/icai1.c
