@@ -18,8 +18,8 @@
 */
 
 #include <rsf.h>
-#include "icaf1.h"
-#include "tcaf1.h"
+#include <rsfgee.h>
+
 #include "filter1d_icaf.h"
 #include "filter1d_tcaf.h"
 
