@@ -16,37 +16,37 @@
   along with this program; if not, write to the Free Software
   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
+#include <stdio.h> 
 
 #include <rsf.h>
 /*^*/
-#include "patch.h"
-#include "patch1.h"
-#include "mkwallwt.h"
-#include "spitzbl.h"
-#include <stdio.h> 
 
+#include <rsfgee.h>
+
+#include "patch1.h"
+#include "spitzbl.h"
 #include "patching1bl.h"
 
 void patching1bl(float* modl /* input */, 
-	      float* data      /* output */, 
-	      int dim          /* number of dimensions */, 
-	      int* npatch      /* number of patches [dim] */, 
-	      int* nwall       /* data size in[dim] */, 
-	      int* nwind       /* patch size in[dim] */, 
-	      int* nwall_out   /* data size out [dim] */, 
-	      int* nwind_out   /* patch size out [dim] */, 
-		  float* windwt    /* window weight */,
-		  int order        /* linear PEF order */,
-		  int ntraces      /* number of traces to be interpolated*/,
-		  float *f		   /* frequency bandwitch normalized [0 0.5]*/,
-		  bool verb		   /* verbosity flag*/,
-		  bool norm        /* normalization flag*/	)
+		 float* data      /* output */, 
+		 int dim          /* number of dimensions */, 
+		 int* npatch      /* number of patches [dim] */, 
+		 int* nwall       /* data size in[dim] */, 
+		 int* nwind       /* patch size in[dim] */, 
+		 int* nwall_out   /* data size out [dim] */, 
+		 int* nwind_out   /* patch size out [dim] */, 
+		 float* windwt    /* window weight */,
+		 int order        /* linear PEF order */,
+		 int ntraces      /* number of traces to be interpolated*/,
+		 float *f		   /* frequency bandwitch normalized [0 0.5]*/,
+		 bool verb		   /* verbosity flag*/,
+		 bool norm        /* normalization flag*/	)
 /*< patch spitz filter >*/
 {
 
-	float *winmodl, *windata, *wallwt;
+    float *winmodl, *windata, *wallwt;
     int i, j, iw, ip, np, n, nw, n_out, nw_out;
-	//char WB[]="|/-\\|/-\\";
+    //char WB[]="|/-\\|/-\\";
 
     np = n = nw = n_out = nw_out = 1; 
     for (j=0; j < dim; j++) {
@@ -64,25 +64,25 @@ void patching1bl(float* modl /* input */,
     for (i=0; i < n_out; i++) data[i] = 0.;
 
     patch_init(dim, npatch, nwall, nwind);
-	patch1_init(dim, npatch, nwall_out, nwind_out);    
+    patch1_init(dim, npatch, nwall_out, nwind_out);    
 
-	for (ip = 0; ip < np; ip++) {
-		/* modl -> winmodl */
-		patch_lop(false, false, n, nw, modl, winmodl);	
-		/* winmodl -> windata */
+    for (ip = 0; ip < np; ip++) {
+	/* modl -> winmodl */
+	patch_lop(false, false, n, nw, modl, winmodl);	
+	/* winmodl -> windata */
 
-		spitzbl(winmodl,windata, nwind, order, ntraces, f, norm);
+	spitzbl(winmodl,windata, nwind, order, ntraces, f, norm);
 
-		/* apply window weighting */
-		for (iw=0; iw < nw_out; iw++) windata[iw] *= windwt[iw];
-		/* data <- windata */
-		patch1_lop(true, true, n_out, nw_out, data, windata);
-		patch_close();
-		patch1_close();
-		if (verb==true) sf_warning("##### Spitz on Patch %d/%d #####",ip+1,np); 
+	/* apply window weighting */
+	for (iw=0; iw < nw_out; iw++) windata[iw] *= windwt[iw];
+	/* data <- windata */
+	patch1_lop(true, true, n_out, nw_out, data, windata);
+	patch_close();
+	patch1_close();
+	if (verb==true) sf_warning("##### Spitz on Patch %d/%d #####",ip+1,np); 
     	//if (verb==true) sf_warning("\r %3.2f%%      %c",(float)100*(ip+1)/np,WB[ip%8]);
     	//fflush(stdout);
-	}
+    }
 
 	
 
